175: fix alignment issues in the review page
update track listing table per suggestions from jon cousins. includes the following changes:

   * remove duplicate code
   * vertically algin play icon with track title
   * add padding in header title

--- a/css/kzsustyle.css
+++ b/css/kzsustyle.css
@@ -237,6 +237,6 @@ P.zktitle A {
 	background-color: #980000;
 }
 
-.playTrack DIV {
+DIV.playTrack {
     filter: invert(0.3) sepia(1) saturate(5) hue-rotate(310deg);
 }
